syntax = "proto3";

option csharp_namespace = "grpc_server";

package webDev;

service WebDev{
    rpc CreateProject(Project) returns (ProjectConfirmation);
}

message Project {
    string name = 1;
    int32 id =2;
}

message ProjectConfirmation{
    string msg = 1 ;
}
